# pyfirst

./: CHANGELOG.md  LICENCE  README.md  pyproject.toml
docs/: .readthedocs.yaml  FIRST.ipynb  FIRSTRank.ipynb  Makefile  SelectByFIRST.ipynb  ShapleySobolKNN.ipynb  TotalSobolKNN.ipynb  conf.py  index.md  requirements.txt
docs/_build/doctrees/: FIRST.doctree  FIRSTRank.doctree  SelectByFIRST.doctree  ShapleySobolKNN.doctree  TotalSobolKNN.doctree  changelog.doctree  environment.pickle  index.doctree
docs/_build/doctrees/autoapi/: index.doctree
docs/_build/doctrees/autoapi/first/: index.doctree
docs/_build/doctrees/autoapi/first/first/: index.doctree
docs/_build/doctrees/autoapi/pyfirst/: index.doctree
docs/_build/html/: .buildinfo  FIRST.html  FIRSTRank.html  SelectByFIRST.html  ShapleySobolKNN.html  TotalSobolKNN.html  changelog.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/first/: first.html
docs/_build/html/_modules/pyfirst/: pyfirst.html
docs/_build/html/_sources/: FIRST.ipynb.txt  SelectByFIRST.ipynb.txt  ShapleySobolKNN.ipynb.txt  TotalSobolKNN.ipynb.txt  index.md.txt
docs/_build/html/_sources/autoapi/: index.rst.txt
docs/_build/html/autoapi/: index.html
docs/_build/html/autoapi/first/: index.html
docs/_build/html/autoapi/pyfirst/: index.html
docs/_build/jupyter_execute/: FIRST.ipynb  FIRSTRank.ipynb  SelectByFIRST.ipynb  ShapleySobolKNN.ipynb  TotalSobolKNN.ipynb
src/first/: __init__.py
src/pyfirst/: __init__.py  pyfirst.py
(+7 files in other folders)
