[tool.poetry]
name = "pyfirst"
version = "0.1.3"
description = "Factor Importance Ranking and Selection using Total Indices"
authors = ["Chaofan Huang <chuang397@gatech.edu>", "V. Roshan Joseph <roshan@gatech.edu>"]
maintainers = ["Chaofan Huang <chuang397@gatech.edu>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/BillHuang01/pyfirst"
repository = "https://github.com/BillHuang01/pyfirst.git"
documentation = "https://pyfirst.readthedocs.io/"
classifiers = [
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = ">=3.7.1"
numpy = ">=1.20.3"
pandas = ">=1.3.4"
scikit-learn = ">=0.24.2"
faiss-cpu = ">=1.7.4"
twinning = ">=1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"